# OTUS_quadratic_equation

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: QuadraticEquationSolver.h
src/: QuadraticEquationSolver.cpp
test/: QuadraticEquationSolverTest.cpp
